--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,9 @@ Priority:
 
 Fbld 3:
 * Rewrite the fbld front end to support the new language.
+ - Move params into Env, check them in CheckEnv.
+ - Add Env argument to LookupModuleInterf
+ - Implement LookupModuleInterf
  - Revise the checker.
  - Revise the compiler.
 
