Fixed padding bug in md5 implementation.
Md5 now produces the correct result on an empty message.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 MD5:
-* Fix padding length.
-* Get test to pass.
+* Write c-wrapper to compute md5 on files.
 
 Fbld Test:
 * Port 4.7.5-* tests to fbld
