--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,11 @@
+Fbld 4:
+* Write clean spec
+ - flesh out text
+* Experimentally port all existing programs and tests to new spec.
+* Implement new spec.
+* Refactor existing programs to take advantage of the new features.
+* Write a new program taking advantage of the new features.
+
 Fbld Test:
 * Port 4.7.5-* tests to fbld
 * Port 4.7.6-* tests to fbld
